--- a/favorites/src/main/res/layout/fragment_favorite_tv_show.xml
+++ b/favorites/src/main/res/layout/fragment_favorite_tv_show.xml
@@ -2,14 +2,12 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:shimmer="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black"
-    tools:context=".ui.fragment.movie.MovieFragment">
+    tools:context=".favorite.tvshow.FavoriteTvShowFragment">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_movie"
+        android:id="@+id/rv_tvshow"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         tools:listitem="@layout/item_user"/>
@@ -22,11 +20,18 @@
         android:orientation="vertical"
         android:visibility="gone">
 
-        <ImageView
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:src="@drawable/ic_baseline_collections_bookmark_24"
-            app:tint="@color/gray"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <ImageView
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:src="@drawable/ic_baseline_collections_bookmark_24"
+                app:tint="@color/gray"/>
+        </LinearLayout>
 
         <TextView
             android:layout_width="match_parent"
