--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:background="@color/black"
     tools:context=".ui.DetailActivity">
 
     <RelativeLayout
@@ -121,11 +120,6 @@
                 android:layout_marginTop="310dp"
                 android:layout_marginStart="165dp">
 
-                <ImageView
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:src="@drawable/ic_baseline_stars_24" />
-
                 <TextView
                     android:id="@+id/tv_score"
                     android:layout_width="wrap_content"
@@ -135,7 +129,9 @@
                     android:fontFamily="@font/inter_semibold"
                     android:text="@string/score"
                     android:textColor="@color/white"
-                    android:textSize="20sp" />
+                    android:textSize="20sp"
+                    app:drawableStartCompat="@drawable/ic_baseline_stars_24"
+                    android:drawablePadding="5dp"/>
             </LinearLayout>
         </FrameLayout>
     </RelativeLayout>
